# chat-room-rs

./: Cargo.toml  README.md
chat_room_client/: Cargo.toml
chat_room_client/src/: main.rs
chat_room_common/: Cargo.toml
chat_room_common/src/: model.rs
chat_room_server/: Cargo.toml
chat_room_server/src/: handler.rs  helper.rs  main.rs
chat_room_server/src/handler/: mod.rs  room.rs  user.rs  websocket.rs
