[package]
name = "chat_room_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chat_room_common = { path = "../chat_room_common" }
warp = "0.3"
tokio = { version = "1.36", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.14"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["serde", "v4"] }